--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\2494229\AppData\Local\Temp\testng-eclipse-654251069\testng-customsuite.xml</span>
+                    <span>C:\Users\2494229\AppData\Local\Temp\testng-eclipse-907412196\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestRunner.Run" class="method navigator-link" hash-for-method="runScenario(&quot;Test the Function&quot;, &quot;mapping&quot;)">runScenario("Test the Function", "mapping")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="TestRunner.apiRun" class="method navigator-link" hash-for-method="runScenario(&quot;Fetch ALL API and check status code.&quot;, &quot;Fetch ALL API and check status code&quot;)">runScenario("Fetch ALL API and check status code.", "Fetch ALL API and check status code")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,15 +122,15 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">TestRunner.Run</span>
+              <span class="class-name">TestRunner.apiRun</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Test the Function&quot;, &quot;mapping&quot;)">
-                  </a> <!-- runScenario("Test the Function", "mapping") -->
+                  <a name="runScenario(&quot;Fetch ALL API and check status code.&quot;, &quot;Fetch ALL API and check status code&quot;)">
+                  </a> <!-- runScenario("Fetch ALL API and check status code.", "Fetch ALL API and check status code") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Test the Function", "mapping")</span>
+                  <span class="parameters">("Fetch ALL API and check status code.", "Fetch ALL API and check status code")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -140,7 +140,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\2494229\AppData\Local\Temp\testng-eclipse-654251069\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\2494229\AppData\Local\Temp\testng-eclipse-907412196\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -149,7 +149,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TestRunner.Run&quot;/&gt;
+      &lt;class name=&quot;TestRunner.apiRun&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -200,13 +200,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'TestRunner.Run')
-data.setCell(0, 3, 766);
+data.setCell(0, 2, 'TestRunner.apiRun')
+data.setCell(0, 3, 21225);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 766 ms</span>
+              <span class="suite-total-time">Total running time: 21 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -232,18 +232,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TestRunner.Run</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">TestRunner.apiRun</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@424de326)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@115a7e51)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Test the Function", "mapping")</span>
-                <span class="method-start">845 ms</span>
+                <span class="method-name">runScenario("Fetch ALL API and check status code.", "Fetch ALL API and check status code")</span>
+                <span class="method-start">784 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">1618 ms</span>
+                <span class="method-start">22015 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
