--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\2494229\AppData\Local\Temp\testng-eclipse-907412196\testng-customsuite.xml</span>
+                    <span>C:\Users\2494229\AppData\Local\Temp\testng-eclipse--1612390038\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Default_suite" class="navigator-link ">
-                    <span>1 group</span>
+                    <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestRunner.apiRun" class="method navigator-link" hash-for-method="runScenario(&quot;Fetch ALL API and check status code.&quot;, &quot;Fetch ALL API and check status code&quot;)">runScenario("Fetch ALL API and check status code.", "Fetch ALL API and check status code")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="StepDefinition.credilio_journey" class="method navigator-link" hash-for-method="fetch_the_lead_from_response">fetch_the_lead_from_response</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,17 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">TestRunner.apiRun</span>
+              <span class="class-name">StepDefinition.credilio_journey</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Fetch ALL API and check status code.&quot;, &quot;Fetch ALL API and check status code&quot;)">
-                  </a> <!-- runScenario("Fetch ALL API and check status code.", "Fetch ALL API and check status code") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Fetch ALL API and check status code.", "Fetch ALL API and check status code")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
+                  <a name="fetch_the_lead_from_response">
+                  </a> <!-- fetch_the_lead_from_response -->
+                  <span class="method-name">fetch_the_lead_from_response</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -140,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\2494229\AppData\Local\Temp\testng-eclipse-907412196\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\2494229\AppData\Local\Temp\testng-eclipse--1612390038\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -149,7 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TestRunner.apiRun&quot;/&gt;
+      &lt;class name=&quot;StepDefinition.credilio_journey&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;fetch_the_lead_from_response&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- StepDefinition.credilio_journey --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -173,14 +174,6 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="test-group">
-              <span class="test-group-name">cucumber</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">runScenario</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -199,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'TestRunner.apiRun')
-data.setCell(0, 3, 21225);
+data.setCell(0, 1, 'fetch_the_lead_from_response')
+data.setCell(0, 2, 'StepDefinition.credilio_journey')
+data.setCell(0, 3, 71371);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 21 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,9 +214,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">StepDefinition.credilio_journey</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">fill_the_lead_form_with_detailes</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -232,19 +232,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TestRunner.apiRun</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@115a7e51)</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
+              <div class="chronological-class-name">StepDefinition.credilio_journey</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">runScenario("Fetch ALL API and check status code.", "Fetch ALL API and check status code")</span>
-                <span class="method-start">784 ms</span>
+                <span class="method-name">fetch_the_lead_from_response</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">tearDownClass</span>
-                <span class="method-start">22015 ms</span>
-              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
