--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,3 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>StepDefinition.credilio_journey.fill_the_lead_form_with_detailes</td></tr>
 </table>
