--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f60aa">  <td>24/06/27 19:43:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:TestRunner.apiRun@645aa696]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1306246648</td>   <td></td> </tr>
-<tr bgcolor="9f60aa">  <td>24/06/27 19:43:00</td>   <td>-21231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.apiRun@645aa696]">runScenario</td> 
-  <td>main@1306246648</td>   <td></td> </tr>
-<tr bgcolor="9f60aa">  <td>24/06/27 19:42:59</td>   <td>-22003</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:TestRunner.apiRun@645aa696]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1306246648</td>   <td></td> </tr>
+<tr bgcolor="9fe6c9">  <td>24/06/30 00:07:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="credilio_journey.fetch_the_lead_from_response()[pri:0, instance:StepDefinition.credilio_journey@6340e5f0]">fetch_the_lead_from_response</td> 
+  <td>main@1603177117</td>   <td></td> </tr>
 </table>
